Removed null check in verifier